--- a/package.xml
+++ b/package.xml
@@ -61,6 +61,8 @@
   <depend>moveit_ros_planning</depend>
   <depend>moveit_ros_planning_interface</depend>
   <depend>moveit_msgs</depend>
+  <depend>message_runtime</depend>
+  <depend>message_generation</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
