--- a/config/goal_poses.yaml
+++ b/config/goal_poses.yaml
@@ -34,9 +34,11 @@ poses:
   - p5: 
       x: 0.4
       y: -0.05
-      z: 0.8
+      z: 1.0
       qx: -0.692
       qy: 0.203
       qz: -0.6078
       qw: 0.331
+
+      #self.p1.orientation.x = -0.692; self.p1.orientation.y = 0.203; self.p1.orientation.z = -0.6078; self.p1.orientation.w = 0.331
 
