--- a/config/robot_config.yaml
+++ b/config/robot_config.yaml
@@ -1,33 +1,37 @@
 robot: 
-  name: "franka"
+  arm_name: panda_manipulator
+  ee_link_name: panda_hand_tcp
 topic:
   sub:
     cmd_pose:
-      name: /arm/command/pose
+      name: arm/command/cmd_pose
       queue: 1
     cmd_tool_orientation:
-      name: /tool/command/orientation
+      name: tool/command/cmd_orientation
       queue: 1
     cmd_delta_pose: 
-      name: /arm/command/delta_pose
+      name: arm/command/cmd_delta_pose
       queue: 1  
   pub:
     display_trajectory:
-      name: /move_group/display_planned_path
+      name: arm/display_path
       queue: 1
     current_pose:
-      name: /arm/state/pose
+      name: arm/state/current_pose
+      queue: 1
 srv: 
   disable_collision: 
     name: /move_group/disable_collision
   add_collision: 
-    name: "/move_group/add_collision"
+    name: /move_group/add_collision
   start_position_ctl: 
-    name: "/start_position_ctl"
+    name: start_position_ctl
   start_joint_traj_ctl: 
-    name: "/start_joint_traj_ctl"
-  start_joint_group_ctl: 
-    name: "/start_joint_group_ctl"
+    name: start_joint_traj_ctl
+  start_joint_group_pos_ctl: 
+    name: start_joint_group_pos_ctl
+  start_joint_group_vel_ctl: 
+    name: start_joint_group_vel_ctl
     
 
 
