--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,12 +34,12 @@ add_service_files(
         DIRECTORY srv
         FILES
         getIk.srv
+        changeState.srv
 )
 
 generate_messages(
         DEPENDENCIES std_msgs geometry_msgs sensor_msgs
 )
-
 
 catkin_package(
   INCLUDE_DIRS include srv
