[cpp] Arm ctl, added state change with srv

--- a/config/robot_config.yaml
+++ b/config/robot_config.yaml
@@ -33,6 +33,8 @@ srv:
     name: start_joint_group_pos_ctl
   start_joint_group_vel_ctl: 
     name: start_joint_group_vel_ctl
+  change_robot_state: 
+    name: "change_state"
     
 
 
