[servo] Added first GAZEBO functional servo

--- a/config/franka_servo_config.yaml
+++ b/config/franka_servo_config.yaml
@@ -7,7 +7,7 @@ use_gazebo: true # Whether the robot is started in a Gazebo simulation environme
 command_in_type: "speed_units" # "unitless"> in the range [-1:1], as if from joystick. "speed_units"> cmds are in m/s and rad/s
 scale:
   # Scale parameters are only used if command_in_type=="unitless"
-  linear:  0.6  # Max linear velocity. Meters per publish_period. Unit is [m/s]. Only used for Cartesian commands.
+  linear:  0.1  # Max linear velocity. Meters per publish_period. Unit is [m/s]. Only used for Cartesian commands.
   rotational:  0.3 # Max angular velocity. Rads per publish_period. Unit is [rad/s]. Only used for Cartesian commands.
   # Max joint angular/linear velocity. Rads or Meters per publish period. Only used for joint commands on joint_command_in_topic.
   joint: 0.01
@@ -33,7 +33,7 @@ planning_frame: world  # The MoveIt planning frame. Often 'base_link' or 'world'
 
 ## Other frames
 ee_frame_name: panda_hand_tcp  # The name of the end effector link, used to return the EE pose
-robot_link_command_frame:  world  # commands must be given in the frame of a robot link. Usually either the base or end effector
+robot_link_command_frame:  panda_hand_tcp  # commands must be given in the frame of a robot link. Usually either the base or end effector
 
 ## Stopping behaviour
 incoming_command_timeout:  1.0  # Stop servoing if X seconds elapse without a new command
