--- a/config/franka_servo_config.yaml
+++ b/config/franka_servo_config.yaml
@@ -29,7 +29,7 @@ publish_joint_accelerations: false
 
 ## MoveIt properties
 move_group_name:  panda_manipulator  # Often 'manipulator' or 'arm'
-planning_frame: world  # The MoveIt planning frame. Often 'base_link' or 'world'
+planning_frame: panda_link0  # The MoveIt planning frame. Often 'base_link' or 'world'
 
 ## Other frames
 ee_frame_name: panda_hand_tcp  # The name of the end effector link, used to return the EE pose
